Make: Tune JVM for benchmarks